change map image and alert box

--- a/assets/Resources/i18n/en-US.json
+++ b/assets/Resources/i18n/en-US.json
@@ -1,5 +1,8 @@
 {
   "remaining": "Today remaining",
   "myPrize": "My prize",
-  "descTitle": "aaa abbbbbc cccccd dddee qwe"
+  "descTitle": "aaa abbbbbc cccccd dddee qwe",
+  "go": "Go",
+  "closeTips": "Close",
+  "myGift": "My Gift"
 }
