--- a/assets/Resources/i18n/zh-HK.json
+++ b/assets/Resources/i18n/zh-HK.json
@@ -1,5 +1,8 @@
 {
   "remaining": "今日剩余次数",
   "myPrize": "我的奖品",
-  "descTitle": "本活动适用于Whoot！所有用户 aaaaaa"
+  "descTitle": "本活动适用于Whoot！所有用户 aaaaaa",
+  "go": "前进",
+  "closeTips": "关闭提示",
+  "myGift": "查看我的礼物"
 }
